--- a/invoice.html
+++ b/invoice.html
@@ -98,7 +98,7 @@
     <div id="saved-signature"></div>
   
     <p style="font-weight: normal; margin-bottom: 0px; font-size: 15px;" id="username"></p>
-    <div style="margin-bottom: 0px; margin-top: 0px; font-weight: bold; font-size: 15px;" id="company-name"></div>
+    <p style="margin-bottom: 0px; margin-top: 0px; font-weight: bold; font-size: 15px;" id="company-name"></p>
   </div>
 
   <script>
@@ -220,8 +220,6 @@
 if (bankAccountNumber === "2910822929") {
   document.getElementById("logo-container").style.display = "none";
   
-  
-    
 }
   
   </script>
