--- a/contract.html
+++ b/contract.html
@@ -59,6 +59,10 @@
       padding: 0;
     }
 
+    h2 {
+      margin-bottom: 10px !important;
+    }
+
     /* Tambahan opsional */
     .center {
       text-align: center;
