--- a/contract.html
+++ b/contract.html
@@ -139,6 +139,11 @@
   #saved-signature {
     flex: 1;
   }
+    #saved-signature img { 
+      display: block; 
+      max-width: 100px; 
+      margin-top: 10px;
+    }
 
     
   </style>
