--- a/contract.html
+++ b/contract.html
@@ -244,7 +244,7 @@
   These Contract Agreement is formed from the agreed quotation from Tenant Party and Rental Party. By signing every page Tenant Party is deemed to have read and agreed with everything which written therein.
   </p>
 
-  <div style="display: flex; justify-content: space-between; margin-top: 10px;">
+  <div style="display: flex; justify-content: space-between; margin-top: 5px;">
   <p style="text-align: left;">Tenant Party</p>
   <p style="text-align: right;">Rental Party</p>
   </div>
@@ -260,14 +260,14 @@
   </div>
   <div id="saved-signature"></div>
   </div>
-  <div style="display: flex; justify-content: space-between; margin-top: 1px;">
+  <div style="display: flex; justify-content: space-between; margin-top: 1px !important;">
   <div style="text-align: center;">
-    <div style="border-top: 1px solid #000; width: 100px; margin-bottom: 1px;"></div>
-    <p style="text-align: left; margin-top: 2px;" id="client-name">Tenant Party</p>
+    <div style="border-top: 1px solid #000; width: 100px; margin-bottom: 1px !important;"></div>
+    <p style="text-align: left; margin-top: 2px !important;" id="client-name">Tenant Party</p>
   </div>
   <div style="text-align: center;">
-    <div style="border-top: 1px solid #000; width: 200px; margin-bottom: 1px;"></div>
-    <p style="text-align: right; margin-top: 1px;" id="rental-name">Rental Party</p>
+    <div style="border-top: 1px solid #000; width: 100px; margin-bottom: 1px !important;"></div>
+    <p style="text-align: right; margin-top: 1px !important;" id="rental-name">Rental Party</p>
   </div>
 </div>
 
