--- a/contract.html
+++ b/contract.html
@@ -90,6 +90,7 @@
     font-weight: normal;
     margin: 8px 0;
     gap: 1%;
+    margin-bottom: 0px;
     }
     .label-termin span:first-child {
     width: 150px;  /* Atur agar semua label panjangnya sama */
@@ -137,7 +138,9 @@
   }
 
   #saved-signature {
-    flex: 1;
+    display: block; 
+    max-width: 200px; 
+    margin-top: 20px;
   }
     
   </style>
