--- a/contract.html
+++ b/contract.html
@@ -78,6 +78,7 @@
     font-weight: normal;
     margin: 8px 0;
     gap: 1%;
+    margin-bottom: 0px !important;
     }
     .label-row span:first-child {
     width: 150px;  /* Atur agar semua label panjangnya sama */
@@ -90,7 +91,7 @@
     font-weight: normal;
     margin: 8px 0;
     gap: 1%;
-    margin-bottom: 0px;
+    margin-bottom: 0px !important;
     }
     .label-termin span:first-child {
     width: 150px;  /* Atur agar semua label panjangnya sama */
