--- a/contract.html
+++ b/contract.html
@@ -30,6 +30,32 @@
       text-align: justify;
     }
 
+    @media (max-width: 932px) {
+      
+      body { 
+        padding: 10px;
+        font-size: 12px; 
+    }
+
+    .label-termin {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 13px !important;
+    font-weight: normal;
+    margin: 1px 0;
+    gap: 1% !important;
+    }
+    
+    .label-row {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 13px !important;
+    font-weight: normal;
+    margin: 1px 0;
+    gap: 0 !important;
+    }
+}
+
     @media print {
       body {
         margin: 0;
@@ -98,7 +124,7 @@
     .label-paragraf1 {
     display: flex;
     justify-content: flex-start;
-    font-size: 16px;
+    font-size: 13px !important;
     font-weight: normal;
     margin: 2px 0;
     gap: 1%;
@@ -110,7 +136,7 @@
     .label-paragraf2 {
     display: flex;
     justify-content: flex-start;
-    font-size: 16px;
+    font-size: 13px !important;
     font-weight: normal;
     margin: 2px 0;
     gap: 1%;
