--- a/contract.html
+++ b/contract.html
@@ -52,7 +52,7 @@
     font-size: 13px !important;
     font-weight: normal;
     margin: 1px 0;
-    gap: 0 !important;
+    gap: 1% !important;
     }
 }
 
