--- a/quotation.html
+++ b/quotation.html
@@ -464,7 +464,7 @@ window.addEventListener("DOMContentLoaded", function () {
       document.getElementById("discount-equipments").style.display = "none";
     }
     if (additionalDiscount === "") {
-      document.getElementByid("add-discount").style.display = "none";
+      document.getElementById("add-discount").style.display = "none";
     }
 
   
