--- a/quotation.html
+++ b/quotation.html
@@ -315,7 +315,7 @@
   </div>
   <div class="label-rowsub" id="add-discount">
   <span>Additional Discount</span>
-  <span>: <span id="discount-cash"></span></span>
+  <span>: <span id="additional-discount"></span></span>
   </div>
 
    <!-- After Discount -->
