--- a/quotation.html
+++ b/quotation.html
@@ -311,7 +311,7 @@
   <!-- Discount -->
   <div class="label-rowsub" id="discount-equipments">
   <span>Discount for Equipments</span>
-  <span>: <span id="discount"></span></span>
+  <span>: <span id="discount-for-equipments"></span></span>
   </div>
   <div class="label-rowsub" id="add-discount">
   <span>Additional Discount</span>
@@ -372,7 +372,7 @@
     document.getElementById("quote-number").innerText = quoteNumber;
     document.getElementById("total-cost-orders").innerText = formatCurrency(totalcostorders);
     document.getElementById("total-cost-go").innerText = formatCurrency(totalcostGO);
-    document.getElementById("discount").innerText = discount + "%";
+    document.getElementById("discount-for-equipments").innerText = discount + "%";
     document.getElementById("additional-discount").innerText = formatCurrency(additional-discount);
     document.getElementById("after-discount").innerText = formatCurrency(afterDiscount);
     document.getElementById("grand-total").innerText = formatCurrency(grandtotal);
