--- a/quotation.html
+++ b/quotation.html
@@ -373,7 +373,7 @@
     document.getElementById("total-cost-orders").innerText = formatCurrency(totalcostorders);
     document.getElementById("total-cost-go").innerText = formatCurrency(totalcostGO);
     document.getElementById("discount-for-equipments").innerText = discount + "%";
-    document.getElementById("additional-discount").innerText = formatCurrency(additional-discount);
+    document.getElementById("additional-discount").innerText = formatCurrency(additionalDiscount);
     document.getElementById("after-discount").innerText = formatCurrency(afterDiscount);
     document.getElementById("grand-total").innerText = formatCurrency(grandtotal);
 
