--- a/quotation.html
+++ b/quotation.html
@@ -460,7 +460,7 @@ window.addEventListener("DOMContentLoaded", function () {
     });
   });
 
-    if (discount === "%") {
+    if (discount === "") {
       document.getElementById("discount-equipments").style.display = "none";
     }
     if (additionalDiscount === "") {
