--- a/quotation.html
+++ b/quotation.html
@@ -380,7 +380,7 @@
     document.getElementById("project-name").innerText = project;
     document.getElementById("production-house").innerText = productionHouse;
     document.getElementById("production-date").innerText = productionDate;
-    document.getElementById("company-name").innerText = company;
+    document.getElementById("company-name").innerText = companyName;
     document.getElementById("company-address").innerText = companyAddress;
     document.getElementById("client-name").innerText = clientName;
     document.getElementById("quote-number").innerText = quoteNumber;
