--- a/contract.html
+++ b/contract.html
@@ -190,7 +190,7 @@
   </p>
 
   <p>
-    This agreement renting equipments for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text]</em>“ gross for <strong class="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipments exceeds shooting day, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
+    This agreement renting equipments for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text]</em>“ Nett for <strong class="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipments exceeds shooting day, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
   </p>
 
   <p id="termin-payment">
