--- a/contract.html
+++ b/contract.html
@@ -30,6 +30,26 @@
       text-align: justify;
     }
 
+     .foto-box {
+      width: 300px;
+      height: 200px;
+      border: 2px dashed #999;
+      margin: 10px 0;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #555;
+      font-family: sans-serif;
+    }
+    .pdf-box {
+      width: 100%;
+      height: 600px;
+      margin-top: 30px;
+      border: 2px solid #666;
+    }
+
     @media (max-width: 932px) {
       
       body { 
@@ -55,6 +75,26 @@
     gap: 1% !important;
     }
 }
+
+      .foto-box {
+      width: 300px;
+      height: 200px;
+      border: 2px dashed #999;
+      margin: 10px 0;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #555;
+      font-family: sans-serif;
+    }
+    .pdf-box {
+      width: 100%;
+      height: 600px;
+      margin-top: 30px;
+      border: 2px solid #666;
+    }
 
     @media print {
       body {
