--- a/contract.html
+++ b/contract.html
@@ -360,6 +360,8 @@
     <img src="assets/NPWP Perusahaan.webp" alt="Foto NPWP">
   </div>
 
+  </div>
+
   <script>
 
     const urlParams       = new URLSearchParams(window.location.search);      
